added finished application

--- a/job-seeker-app/src/app/feature/jobs/components/apply-job-item/apply-job-item.component.html
+++ b/job-seeker-app/src/app/feature/jobs/components/apply-job-item/apply-job-item.component.html
@@ -16,4 +16,13 @@
       (btnClick)="onCancelClick(appliedJob().id)"
     ></app-button>
   </div>
+  <div class="more-details-container" appToogleDetails>
+    <h4>More details ⬇️</h4>
+    <div class="more-details">
+      <p><strong>Location:</strong> {{ appliedJob().location }}</p>
+      <p><strong>Country:</strong> {{ appliedJob().country }}</p>
+      <p><strong>Qualifications:</strong> {{ appliedJob().qualifications }}</p>
+      <p><strong>About:</strong> {{ appliedJob().description }}</p>
+    </div>
+  </div>
 </div>
