--- a/job-seeker-app/src/app/feature/jobs/components/job-list/job-list.component.html
+++ b/job-seeker-app/src/app/feature/jobs/components/job-list/job-list.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="job-list-heading">
-    <h3>Job list:({{ totalJobNumer() }})</h3>
+    <h3>Available Jobs:({{ jobs().length }})</h3>
     <div>
       <app-button text="Salary" (btnClick)="onClickSort()"></app-button>
       <app-button
