--- a/job-seeker-app/src/styles.scss
+++ b/job-seeker-app/src/styles.scss
@@ -90,3 +90,11 @@ main {
     border: 1px solid black;
   }
 }
+
+.more-details-container {
+  cursor: pointer;
+  h4 {
+    margin: 0;
+    cursor: pointer;
+  }
+}
