added routing, added pages and style it

--- a/job-seeker-app/src/app/app.component.html
+++ b/job-seeker-app/src/app/app.component.html
@@ -1,6 +1,5 @@
 <app-header />
 <main>
-  <app-job-list></app-job-list>
-  <app-apply-job-list></app-apply-job-list>
+  <router-outlet></router-outlet>
 </main>
 <app-footer />
