--- a/job-seeker-app/src/app/core/header/header.component.scss
+++ b/job-seeker-app/src/app/core/header/header.component.scss
@@ -4,9 +4,39 @@
   color: white;
   padding: 10px 20px;
   display: flex;
+  justify-content: space-between;
   align-items: center;
 
   h1 {
     margin: 0;
+  }
+}
+
+.nav {
+  ul {
+    list-style: none;
+    display: flex;
+
+    li {
+      font-size: 22px;
+      cursor: pointer;
+      text-decoration: none;
+      margin: 15px;
+
+      a {
+        text-decoration: none;
+        padding: 5px;
+        border-radius: 4px;
+        color: white;
+        cursor: pointer;
+      }
+
+      .active {
+        background-color: white;
+        padding: 5px;
+        border-radius: 4px;
+        color: slateblue;
+      }
+    }
   }
 }
