added and finish home page

--- a/job-seeker-app/src/app/core/footer/footer.component.scss
+++ b/job-seeker-app/src/app/core/footer/footer.component.scss
@@ -3,6 +3,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: slateblue;
+  background-color: #4361ee;
   color: white;
 }
