--- a/job-seeker-app/src/app/core/header/header.component.scss
+++ b/job-seeker-app/src/app/core/header/header.component.scss
@@ -1,6 +1,6 @@
 .header {
   height: 80px;
-  background-color: slateblue;
+  background-color: #4361ee;
   color: white;
   padding: 10px 20px;
   display: flex;
@@ -35,7 +35,7 @@
         background-color: white;
         padding: 5px;
         border-radius: 4px;
-        color: slateblue;
+        color: #4361ee;
       }
     }
   }
