--- a/job-seeker-app/src/app/feature/home/home.component.html
+++ b/job-seeker-app/src/app/feature/home/home.component.html
@@ -3,8 +3,9 @@
     <h1>Welcome to Job Seeker App!</h1>
     <app-button
       text="Check alivable jobs"
+      (btnClick)="onNaviagteClick()"
       [style]="{
-        backgroundColor: 'slateblue',
+        backgroundColor: '#4361ee',
         width: '220px',
         fontSize: '18px',
         height: '55px',
@@ -14,6 +15,6 @@
     ></app-button>
   </div>
   <div class="home-page-logo-container">
-    <img src="#" alt="website logo" />
+    <img src="/images/job-search.png" alt="website logo" />
   </div>
 </section>
