--- a/job-seeker-app/src/styles.scss
+++ b/job-seeker-app/src/styles.scss
@@ -39,7 +39,7 @@ main {
 
 .job-item {
   height: max-content;
-  background-color: slateblue;
+  background-color: #4361ee;
   border-radius: 4px;
   padding: 30px 20px;
   display: flex;
@@ -76,7 +76,7 @@ main {
   width: 80px;
   height: 30px;
   background-color: white;
-  color: slateblue;
+  color: #4361ee;
   border: 0.5px solid slategray;
   border-radius: 3px;
   cursor: pointer;
