added comapny page and set up with logic and style, finished home page and jobs page with serach implementation

--- a/job-seeker-app/src/app/feature/jobs/components/apply-job-item/apply-job-item.component.html
+++ b/job-seeker-app/src/app/feature/jobs/components/apply-job-item/apply-job-item.component.html
@@ -1,6 +1,6 @@
 <div class="job-item">
   <div class="job-item-heading-container">
-    <h2>{{ appliedJob().company }}</h2>
+    <h2>{{ appliedJob().company.name }}</h2>
     <p>{{ appliedJob().position }}</p>
   </div>
   <div class="job-item-info-container">
@@ -23,6 +23,11 @@
       <p><strong>Country:</strong> {{ appliedJob().country }}</p>
       <p><strong>Qualifications:</strong> {{ appliedJob().qualifications }}</p>
       <p><strong>About:</strong> {{ appliedJob().description }}</p>
+      <app-button
+        text="Company Details"
+        [style]="{width: '150px',}"
+        (btnClick)="onCompanyButtonNavigateClick(appliedJob().id)"
+      ></app-button>
     </div>
   </div>
 </div>
