--- a/job-seeker-app/src/app/feature/jobs/job-page/job-page.component.html
+++ b/job-seeker-app/src/app/feature/jobs/job-page/job-page.component.html
@@ -1,4 +1,7 @@
 <section class="job-page">
-  <app-job-list></app-job-list>
-  <app-apply-job-list></app-apply-job-list>
+  <div class="filters-container"></div>
+  <div class="job-lists-container">
+    <app-job-list></app-job-list>
+    <app-apply-job-list></app-apply-job-list>
+  </div>
 </section>
