--- a/job-seeker-app/src/app/feature/jobs/job-page/job-page.component.scss
+++ b/job-seeker-app/src/app/feature/jobs/job-page/job-page.component.scss
@@ -1,4 +1,9 @@
 .job-page {
+  display: flex;
+  flex-direction: column;
+}
+
+.job-lists-container {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 50px;
