--- a/job-seeker-app/src/app/feature/jobs/components/job-list/job-list.component.html
+++ b/job-seeker-app/src/app/feature/jobs/components/job-list/job-list.component.html
@@ -1,6 +1,19 @@
 <div class="container">
   <div class="job-list-heading">
+    @if(searchValue()){
+    <h3>Searched Jobs:</h3>
+    } @else {
     <h3>Available Jobs:({{ jobs().length }})</h3>
+    }
+
+    <div>
+      <input
+        type="text"
+        placeholder="Enter your position..."
+        class="search-input"
+        [(ngModel)]="searchValue"
+      />
+    </div>
     <div>
       <app-button text="Salary" (btnClick)="onClickSort()"></app-button>
       <app-button
@@ -19,8 +32,10 @@
     </div>
   </div>
   <div class="job-list-container">
-    @for(job of jobs(); track job.id){
+    @for(job of jobs() | filter: searchValue(); track job.id){
     <app-job-item [job]="job"></app-job-item>
+    } @empty {
+    <h4>No jobs found!</h4>
     }
   </div>
 </div>
