--- a/job-seeker-app/src/app/feature/auth/components/profile-panel/profile-panel.component.html
+++ b/job-seeker-app/src/app/feature/auth/components/profile-panel/profile-panel.component.html
@@ -1,1 +1,59 @@
-<p>profile-panel works!</p>
+<section class="profile-page">
+  <div class="profile-panel">
+    <div class="profile-panel-image-container">
+      <div>
+        <img
+          src="https://t4.ftcdn.net/jpg/02/17/34/67/360_F_217346796_TSg5VcYjsFxZtIDK6Qdctg3yqAapG7Xa.jpg"
+          alt="profile image"
+        />
+      </div>
+      <div class="profile-panel-image-controles-container">
+        <app-button
+          text="Upload"
+          [style]="{ borderRadius: '5px' }"
+        ></app-button>
+        <app-button text="Save" [style]="{ borderRadius: '5px' }"></app-button>
+      </div>
+    </div>
+    <div>
+      <div class="profile-panel-infomations">
+        <h2>User information:</h2>
+        <div class="profile-panel-info-row">
+          <strong>Name:</strong>
+          <div class="info-row-data-div">
+            {{ user().firstName }} {{ user().lastName }}
+          </div>
+        </div>
+        <div class="profile-panel-info-row">
+          <strong>Date of birth:</strong>
+          <div class="info-row-data-div">
+            {{ user().dateOfBirth | date : "MM/dd/yyyy" }}
+          </div>
+        </div>
+        <div class="profile-panel-info-row">
+          <strong>Email:</strong>
+          <div class="info-row-data-div">{{ user().email }}</div>
+        </div>
+        <div class="profile-panel-info-row">
+          <strong>Gender:</strong>
+          <div class="info-row-data-div">{{ user().gender }}</div>
+        </div>
+        <div class="profile-panel-info-row">
+          <strong>Profesion:</strong>
+          <div class="info-row-data-div">{{ user().profesion }}</div>
+        </div>
+        <div class="profile-panel-info-row">
+          <strong>Education:</strong>
+          <div class="info-row-data-div">{{ user().education }}</div>
+        </div>
+      </div>
+      <div class="profile-panel-controls-container">
+        <app-button
+          text="Change"
+          [style]="{ borderRadius: '5px' }"
+        ></app-button>
+        <app-button text="Save" [style]="{ borderRadius: '5px' }"></app-button>
+      </div>
+    </div>
+  </div>
+</section>
