--- a/job-seeker-app/src/app/core/header/header.component.html
+++ b/job-seeker-app/src/app/core/header/header.component.html
@@ -1,5 +1,5 @@
 <header class="header">
-  <h1>Job Seeker</h1>
+  <h1><a routerLink="/">Job Seeker</a></h1>
   <nav class="nav">
     <ul>
       <li>
