--- a/job-seeker-app/src/app/core/header/header.component.scss
+++ b/job-seeker-app/src/app/core/header/header.component.scss
@@ -10,6 +10,14 @@
   h1 {
     margin: 0;
   }
+
+  a {
+    text-decoration: none;
+    padding: 5px;
+    border-radius: 4px;
+    color: white;
+    cursor: pointer;
+  }
 }
 
 .nav {
