--- a/job-seeker-app/src/app/feature/jobs/components/job-list/job-list.component.scss
+++ b/job-seeker-app/src/app/feature/jobs/components/job-list/job-list.component.scss
@@ -1,5 +1,22 @@
+.filter-job-list-container {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.search-filters-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.filters-container {
+  display: flex;
+  gap: 10px;
+}
+
 .search-input {
   height: 20px;
+  width: 250px;
   border: 0.5px solid slategray;
   border-radius: 3px;
   font-size: 14px;
