added about page

--- a/job-seeker-app/src/app/feature/home/home.component.html
+++ b/job-seeker-app/src/app/feature/home/home.component.html
@@ -1,6 +1,6 @@
 <section class="home-page">
   <div class="home-page-heading-container">
-    <h1>Welcome to Job Seeker App!</h1>
+    <h1>Are you <span>looking</span> for a job<span>?</span></h1>
     <app-button
       text="Check alivable jobs"
       (btnClick)="onNaviagteClick()"
