--- a/job-seeker-app/src/app/core/header/header.component.html
+++ b/job-seeker-app/src/app/core/header/header.component.html
@@ -11,6 +11,7 @@
         >
       </li>
       <li><a routerLink="/jobs" routerLinkActive="active">Jobs</a></li>
+      <li><a routerLink="/about" routerLinkActive="active">About</a></li>
       <li>
         <a routerLink="/profile" routerLinkActive="active">
           <i class="fa-regular fa-user"></i
