added contact page, added back to top button, update footer and header, update jobs page and job item

--- a/job-seeker-app/src/app/feature/jobs/components/apply-job-item/apply-job-item.component.html
+++ b/job-seeker-app/src/app/feature/jobs/components/apply-job-item/apply-job-item.component.html
@@ -1,5 +1,12 @@
 <div class="job-item">
   <div class="job-item-heading-container">
+    <div class="job-item-heading-image-container">
+      <img
+        src="{{ appliedJob().company.logo }}"
+        alt="company logo"
+        height="100px"
+      />
+    </div>
     <h2>{{ appliedJob().company.name }}</h2>
     <p>{{ appliedJob().position }}</p>
   </div>
