--- a/job-seeker-app/src/app/feature/jobs/components/job-item/job-item.component.html
+++ b/job-seeker-app/src/app/feature/jobs/components/job-item/job-item.component.html
@@ -1,5 +1,8 @@
 <div class="job-item">
   <div class="job-item-heading-container">
+    <div class="job-item-heading-image-container">
+      <img src="{{ job().company.logo }}" alt="company logo" height="100px" />
+    </div>
     <h2>{{ job().company.name }}</h2>
     <p>{{ job().position }}</p>
   </div>
