--- a/job-seeker-app/src/app/core/footer/footer.component.scss
+++ b/job-seeker-app/src/app/core/footer/footer.component.scss
@@ -1,8 +1,54 @@
 .footer {
   height: 80px;
+  padding: 10px;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   background-color: #4361ee;
   color: white;
+}
+
+.footer-info {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.footer-media-container {
+  display: flex;
+  justify-content: center;
+  gap: 15px;
+
+  small {
+    font-size: 15px;
+    cursor: pointer;
+  }
+}
+
+.footer-nav {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+
+  ul {
+    margin: 0;
+    list-style: none;
+    display: flex;
+    gap: 10px;
+
+    li {
+      cursor: pointer;
+
+      a {
+        text-decoration: none;
+        color: white;
+        font-size: 14px;
+
+        &:hover {
+          color: slategray;
+        }
+      }
+    }
+  }
 }
