--- a/job-seeker-app/src/app/core/header/header.component.html
+++ b/job-seeker-app/src/app/core/header/header.component.html
@@ -12,6 +12,8 @@
       </li>
       <li><a routerLink="/jobs" routerLinkActive="active">Jobs</a></li>
       <li><a routerLink="/about" routerLinkActive="active">About</a></li>
+      <li><a routerLink="/contact" routerLinkActive="active">Contact</a></li>
+
       <li>
         <a routerLink="/profile" routerLinkActive="active">
           <i class="fa-regular fa-user"></i
