--- a/job-seeker-app/src/app/feature/jobs/components/job-list/job-list.component.scss
+++ b/job-seeker-app/src/app/feature/jobs/components/job-list/job-list.component.scss
@@ -7,6 +7,7 @@
 .search-filters-container {
   display: flex;
   justify-content: space-between;
+  gap: 20px;
 }
 
 .filters-container {
@@ -16,7 +17,7 @@
 
 .search-input {
   height: 20px;
-  width: 250px;
+  width: 200px;
   border: 0.5px solid slategray;
   border-radius: 3px;
   font-size: 14px;
