--- a/job-seeker-app/src/styles.scss
+++ b/job-seeker-app/src/styles.scss
@@ -18,7 +18,8 @@ main {
   border-radius: 5px;
   box-shadow: 0 10px 15px rgba(0, 0, 0, 0.14), 0 6px 6px rgba(0, 0, 0, 0.28);
   color: black;
-  padding: 30px;
+  padding: 20px;
+  width: 650px;
 }
 
 .applied-job-list-container {
@@ -26,8 +27,8 @@ main {
   border-radius: 5px;
   box-shadow: 0 10px 15px rgba(0, 0, 0, 0.14), 0 6px 6px rgba(0, 0, 0, 0.28);
   color: black;
-  padding: 30px;
-  margin-top: 110px;
+  padding: 20px;
+  margin-top: 90px;
 }
 
 .job-list-heading {
@@ -57,6 +58,7 @@ main {
   flex-direction: column;
   gap: 20px;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.16), 0 3px 3px rgba(0, 0, 0, 0.2);
+  width: 600px;
 }
 
 .job-item-heading-container {
@@ -84,7 +86,7 @@ main {
 }
 
 .button {
-  width: 80px;
+  width: 70px;
   height: 30px;
   background-color: white;
   color: #4361ee;
@@ -105,4 +107,8 @@ main {
     margin: 0;
     cursor: pointer;
   }
+}
+
+input.ng-invalid.ng-touched {
+  border: 2px solid darkred;
 }
