added add form job to app

--- a/job-seeker-app/src/app/feature/contact/contact.component.scss
+++ b/job-seeker-app/src/app/feature/contact/contact.component.scss
@@ -50,6 +50,10 @@
     padding: 5px;
     width: 101%;
   }
+
+  textarea.ng-invalid.ng-touched {
+    border: 2px solid red;
+  }
 }
 
 .contact-form-row-container {
