--- a/job-seeker-app/src/app/feature/jobs/components/comapny-details/comapny-details.component.html
+++ b/job-seeker-app/src/app/feature/jobs/components/comapny-details/comapny-details.component.html
@@ -22,7 +22,7 @@
         <h2>About company</h2>
       </div>
       <div class="company-description-text">
-        <p>{{ selectedJob().company.description }}</p>
+        <p>{{ selectedJob().company.companyDescription }}</p>
       </div>
     </div>
   </div>
