--- a/job-seeker-app/src/app/feature/jobs/components/add-job/add-job.component.html
+++ b/job-seeker-app/src/app/feature/jobs/components/add-job/add-job.component.html
@@ -1,7 +1,7 @@
 <section class="add-job-page">
   <div class="add-job-form-container">
     <div class="add-job-form-heading-container">
-      <h2>Add job:</h2>
+      <h2>Add job</h2>
     </div>
     <app-job-form (submitOutput)="onAddJob($event)"></app-job-form>
   </div>
