--- a/job-seeker-app/src/app/feature/jobs/components/job-form/job-form.component.html
+++ b/job-seeker-app/src/app/feature/jobs/components/job-form/job-form.component.html
@@ -140,8 +140,12 @@
       <p class="error-message">About company is required!</p>
       }
     </div>
-    <div class="form-group">
-      <button type="submit">Submit</button>
+    <div class="form-group-btn">
+      <app-button
+        [text]="editFormData() ? 'Edit' : 'Add'"
+        type="submit"
+        [style]="{ width: '100px', borderRadius: '4px' }"
+      ></app-button>
     </div>
   </div>
 </form>
