--- a/job-seeker-app/src/app/feature/jobs/components/job-form/job-form.component.scss
+++ b/job-seeker-app/src/app/feature/jobs/components/job-form/job-form.component.scss
@@ -66,6 +66,12 @@
   }
 }
 
+.form-group-btn {
+  display: flex;
+  justify-content: center;
+  margin-top: 30px;
+}
+
 .error-message {
   margin: 0;
   font-size: 14px;
