--- a/job-seeker-app/src/app/feature/home/home.component.html
+++ b/job-seeker-app/src/app/feature/home/home.component.html
@@ -10,7 +10,7 @@
         fontSize: '18px',
         height: '55px',
         color: 'white',
-        borderRadius: '5px'
+        borderRadius: '5px',        
       }"
     ></app-button>
   </div>
