--- a/job-seeker-app/src/app/feature/auth/components/profile-panel/profile-panel.component.html
+++ b/job-seeker-app/src/app/feature/auth/components/profile-panel/profile-panel.component.html
@@ -20,10 +20,19 @@
         <div
           class="profile-panel-nav-container"
           (click)="onPersonalInfoClick()"
+          [ngStyle]="{
+            'border-bottom': !isAuthInfoShown() ? '1px solid black' : 'none'
+          }"
         >
           <h2>Personal information</h2>
         </div>
-        <div class="profile-panel-nav-container" (click)="onUserInfoClick()">
+        <div
+          class="profile-panel-nav-container"
+          (click)="onUserInfoClick()"
+          [ngStyle]="{
+            'border-bottom': isAuthInfoShown() ? '1px solid black' : 'none'
+          }"
+        >
           <h2>Account information</h2>
         </div>
       </div>
