--- a/job-seeker-app/src/app/feature/jobs/components/job-list/job-list.component.html
+++ b/job-seeker-app/src/app/feature/jobs/components/job-list/job-list.component.html
@@ -1,38 +1,10 @@
 <section class="filter-job-list-container">
   <div class="container">
-    <div class="search-filters-container">
-      <div class="search-container">
-        <input
-          type="text"
-          placeholder="Enter your position..."
-          class="search-input"
-          [(ngModel)]="searchValue"
-        />
-      </div>
-      <div class="filters-container">
-        <app-button text="Salary" (btnClick)="onClickSort()"></app-button>
-        <app-button
-          text="Remote"
-          (btnClick)="onFilterButtonClick(filterValue.REMOTE)"
-        ></app-button>
-        <app-button
-          text="Onsite"
-          (btnClick)="onFilterButtonClick(filterValue.ONSITE)"
-        ></app-button>
-        <app-button
-          text="Hybrid"
-          (btnClick)="onFilterButtonClick(filterValue.HYBRID)"
-        ></app-button>
-        <app-button text="Reset" (btnClick)="onResetClick()"></app-button>
-      </div>
-    </div>
-  </div>
-  <div class="container">
     <div class="job-list-heading">
       @if(searchValue()){
-      <h3>Searched Jobs:</h3>
+      <h3>Searched available jobs:</h3>
       } @else {
-      <h3>Available Jobs:({{ jobs().length }})</h3>
+      <h3>Available jobs:({{ jobs().length }})</h3>
       }
     </div>
     <div class="job-list-container">
