--- a/job-seeker-app/src/app/feature/jobs/job-page/job-page.component.scss
+++ b/job-seeker-app/src/app/feature/jobs/job-page/job-page.component.scss
@@ -1,10 +1,42 @@
 .job-page {
   display: flex;
   flex-direction: column;
+  gap: 30px;
 }
 
 .job-lists-container {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 20px;
+}
+
+.filter-job-list-container {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.search-filters-container {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+}
+
+.filters-container {
+  display: flex;
+  gap: 10px;
+}
+
+.search-input {
+  height: 20px;
+  width: 200px;
+  border: 0.5px solid slategray;
+  border-radius: 3px;
+  font-size: 14px;
+  font-weight: 500;
+  padding: 4px;
+
+  &:hover {
+    border: 1px solid black;
+  }
 }
