--- a/job-seeker-app/src/app/feature/auth/components/profile-panel/profile-panel.component.scss
+++ b/job-seeker-app/src/app/feature/auth/components/profile-panel/profile-panel.component.scss
@@ -39,6 +39,7 @@
 
 .profile-panel-infomations-nav {
   background-color: white;
+  border: none;
   border-radius: 4px;
   display: flex;
   justify-content: space-evenly;
