--- a/job-seeker-app/src/app/core/footer/footer.component.scss
+++ b/job-seeker-app/src/app/core/footer/footer.component.scss
@@ -5,8 +5,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #4361ee;
-  color: white;
+  background-color: var(--bg-blue);
+  color: var(--bg-white);
 }
 
 .footer-info {
@@ -25,7 +25,7 @@
     cursor: pointer;
 
     &:hover {
-      color: #00b4d8;
+      color: var(--hover);
     }
   }
 }
@@ -46,11 +46,11 @@
 
       a {
         text-decoration: none;
-        color: white;
+        color: var(--bg-white);
         font-size: 14px;
 
         &:hover {
-          color: #00b4d8;
+          color: var(--hover);
         }
       }
     }
