--- a/job-seeker-app/src/app/core/header/header.component.scss
+++ b/job-seeker-app/src/app/core/header/header.component.scss
@@ -1,7 +1,7 @@
 .header {
   height: 80px;
-  background-color: #4361ee;
-  color: white;
+  background-color: var(--bg-blue);
+  color: var(--bg-white);
   padding: 10px 20px;
   display: flex;
   justify-content: space-between;
@@ -15,7 +15,7 @@
     text-decoration: none;
     padding: 5px;
     border-radius: 4px;
-    color: white;
+    color: var(--bg-white);
     cursor: pointer;
   }
 }
@@ -35,15 +35,15 @@
         text-decoration: none;
         padding: 5px;
         border-radius: 4px;
-        color: white;
+        color: var(--bg-white);
         cursor: pointer;
       }
 
       .active {
-        background-color: white;
+        background-color: var(--bg-white);
         padding: 5px;
         border-radius: 4px;
-        color: #4361ee;
+        color: var(--bg-blue);
       }
     }
   }
