--- a/job-seeker-app/src/app/feature/jobs/components/comapny-details/comapny-details.component.scss
+++ b/job-seeker-app/src/app/feature/jobs/components/comapny-details/comapny-details.component.scss
@@ -5,8 +5,8 @@
 }
 
 .company-details {
-  background-color: #4361ee;
-  color: white;
+  background-color: var(--bg-blue);
+  color: var(--bg-white);
   width: 1100px;
   height: 450px;
   border-radius: 4px;
@@ -23,7 +23,7 @@
 
 .company-name-container {
   width: max-content;
-  border-bottom: 0.5px solid slategray;
+  border-bottom: 0.5px solid var(--bg-grey);
 
   h2 {
     margin-bottom: 5px;
@@ -50,7 +50,7 @@
 }
 
 .company-description-heading {
-  border-bottom: 0.5px solid slategray;
+  border-bottom: 0.5px solid var(--bg-grey);
   h2 {
     margin-bottom: 10px;
   }
