--- a/job-seeker-app/src/styles.scss
+++ b/job-seeker-app/src/styles.scss
@@ -1,4 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;500;600;700;800&display=swap");
+@import "./assets/scss/variables";
+@import "./assets/scss/lists";
+@import "./assets/scss/job-item";
 
 html {
   font-family: "Nunito", sans-serif;
@@ -6,109 +9,19 @@ html {
 
 body {
   margin: 0;
+  box-sizing: border-box;
 }
 
 main {
   padding: 50px;
   min-height: 800px;
+  box-sizing: border-box;
 }
 
 .container {
-  background-color: whitesmoke;
+  background-color: var(--bg-whitesmoke);
   border-radius: 5px;
   box-shadow: 0 10px 15px rgba(0, 0, 0, 0.14), 0 6px 6px rgba(0, 0, 0, 0.28);
   color: black;
   padding: 20px;
-}
-
-.applied-job-list-container {
-  background-color: whitesmoke;
-  border-radius: 5px;
-  box-shadow: 0 10px 15px rgba(0, 0, 0, 0.14), 0 6px 6px rgba(0, 0, 0, 0.28);
-  color: black;
-  padding: 20px;
-}
-
-.job-list-heading {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-
-  div {
-    display: flex;
-    gap: 10px;
-  }
-}
-
-.job-list-container {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-}
-
-.job-item {
-  height: max-content;
-  background-color: #4361ee;
-  color: white;
-  border-radius: 4px;
-  padding: 30px 20px;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.16), 0 3px 3px rgba(0, 0, 0, 0.2);
-}
-
-.job-item-heading-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
-  h2 {
-    margin: 0;
-  }
-
-  p {
-    margin: 0;
-  }
-}
-
-.job-item-info-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
-  p {
-    margin: 0;
-  }
-}
-
-.button {
-  width: 70px;
-  height: 30px;
-  background-color: white;
-  color: #4361ee;
-  border: 0.5px solid slategray;
-  border-radius: 3px;
-  cursor: pointer;
-  font-size: 14px;
-  font-weight: 600;
-
-  &:hover {
-    border: 1px solid black;
-    transform: translate(1px, -1px);
-    transition: 0.3s ease-in-out;
-  }
-}
-
-.more-details-container {
-  cursor: pointer;
-  h4 {
-    margin: 0;
-    cursor: pointer;
-  }
-}
-
-.more-details-controls {
-  display: flex;
-  gap: 10px;
 }
