--- a/job-seeker-app/src/app/core/components/header/header.component.html
+++ b/job-seeker-app/src/app/core/components/header/header.component.html
@@ -15,6 +15,7 @@
       <li><a routerLink="/add-job" routerLinkActive="active">Add job</a></li>
       <li><a routerLink="/about" routerLinkActive="active">About</a></li>
       <li><a routerLink="/contact" routerLinkActive="active">Contact</a></li>
+      <li><a (click)="onLogoutClick()">Logout</a></li>
       <li>
         <a routerLink="/profile" routerLinkActive="active">
           <i class="fa-regular fa-user"></i
